Fix Graph Framework and Graph Utilities tests